Fronted/src/component/Header/Header.css
.header{
    height: 400px;
    margin: 30px auto;
    background-size: cover;
    background-position: center;
    position: relative;
}

.header-contents{
    position: absolute;
    top: 50%;              /* ✅ center vertically */
    left: 40px;
    transform: translateY(-50%);  /* ✅ perfect center */

    display: flex;
    flex-direction: column;
    gap: 15px;
    max-width: 50%;
}

.header-contents h2,
.header-contents p{
    color: white;
}

.header-contents button{
    border: none;
    color: #747474;
    font-weight: 500;
    padding: 1vw 2.3vw;
    background-color: white;
    font-size: max(1vw,13px);
    border-radius: 50px;


}

@media (max-width:1050px){
   

    .header-contents{
        max-width: 45%;
    }

}


@media (max-width:750px){
 

    .header-contents{
        max-width:65%;
    }

    .header-contents p{
        display: none;
    }

    .header-contents button{
        padding: 2vw 4vw;
    }

}

